# hyperflask-start

./: README.md  cookiecutter.json  start.sh
hooks/: post_gen_project.py
{{cookiecutter.project_slug}}/: .coveragerc  .dockerignore  .env  .gitignore  Dockerfile  README.md  config.yml  package.json  pyproject.toml  reqs.txt  tailwind.config.js
{{cookiecutter.project_slug}}/.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
{{cookiecutter.project_slug}}/.github/workflows/: python.yml
{{cookiecutter.project_slug}}/app/: config.yml
{{cookiecutter.project_slug}}/app/assets/: main.css
{{cookiecutter.project_slug}}/app/pages/: index.jpy
{{cookiecutter.project_slug}}/tests/: conftest.py
