[project]
name = "{{cookiecutter.project_slug}}"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "hyperflask >=0.4.0",
    "periodiq" # will be installed from git while an official release is missing
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "pytest-flask>=1.3.0",
    "ruff>=0.12.4"
]

[tool.uv.sources]
periodiq = { git = "https://gitlab.com/bersace/periodiq" }
